fix(countdown): Fix form on small screens

--- a/projects/countdown/src/app/app-create-event-dialog/app-create-event-dialog.css
+++ b/projects/countdown/src/app/app-create-event-dialog/app-create-event-dialog.css
@@ -4,13 +4,7 @@
 }
 
 .dateTime {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
   gap: 24px 12px;
-
-  > * {
-    flex: 1;
-    min-width: fit-content;
-  }
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 160px), 1fr));
 }
